<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.rfid.hf.SplashActivity">

    <!-- Background Gambar Layar -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_welcome_screen" />

    <!-- Judul Utama -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_to_dla"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:paddingTop="50dp"
        android:layout_margin="28dp" />

    <!-- Slogan -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan_books"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="italic"
        android:paddingTop="200dp"
        android:layout_margin="28dp"
        android:paddingEnd="80dp"/>

    <!-- Subjudul Bawah -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:paddingTop="430dp"
        android:text="@string/digitize_faster_more_accurately"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold" />

    <!-- Button Get Started -->
    <ImageButton
        android:id="@+id/button_get_started"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="20dp"
        android:layout_marginBottom="110dp"
        android:background="@null"
        android:contentDescription="Get Started Button"
        android:src="@drawable/button_get_started" />

    <!-- Teks "Supported by" -->
    <TextView
        android:id="@+id/tv_supported"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Supported by"
        android:textColor="@android:color/black"
        android:textSize="12sp"
        android:textStyle="bold"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="35dp"
        android:layout_marginBottom="0dp"
        android:layout_above="@id/img_logo" />

    <!-- Logo di pojok kanan bawah -->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_tip" />

</RelativeLayout>
