<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/tab_inventory"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:keepScreenOn="true"
    android:background="@color/soft_white"
    android:descendantFocusability="blocksDescendants"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <ImageButton
            android:id="@+id/btn_startInventory"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/btn_before_start_inventory"
            android:background="@null"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:clickable="true" />

        <ImageButton
            android:id="@+id/btn_stopInventory"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/btn_before_stop_inventory"
            android:background="@null"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:clickable="true" />

        <ImageButton
            android:id="@+id/btn_clearList"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_weight="1"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/btn_before_clear"
            android:background="@null"
            android:scaleType="centerInside"
            android:adjustViewBounds="true"
            android:clickable="true" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/list_inventory"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:padding="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:textStyle="bold"
                android:text="@string/Count" />

            <TextView
                android:id="@+id/textCount"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#CD0000"
                android:textStyle="bold"
                android:text="0" />
            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Label" />

            <TextView
                android:id="@+id/textNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#CD0000"
                android:textStyle="bold"
                android:text="0" />
            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textStyle="bold"
                android:text="@string/Time" />

            <TextView
                android:id="@+id/textTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="#CD0000"
                android:textStyle="bold"
                android:text="0" />

        </LinearLayout>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#676767"
            android:orientation="vertical" >
        </LinearLayout>
        <include
            android:id="@+id/inventorylist_title"
            layout="@xml/inventorylist_tittle"
            android:layout_marginTop="20dp"/>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="#676767"
            android:orientation="vertical" >
        </LinearLayout>

        <ListView
            android:id="@+id/list_inventory_record"
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="@color/soft_white"
            android:cacheColorHint="@android:color/transparent"
            android:divider="#676767"
            android:dividerHeight="1.0dp"
            android:fadingEdge="none"
            android:scrollbars="vertical" >
        </ListView>

    </LinearLayout>

</LinearLayout>