<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context="com.rfid.hf.SplashActivity">

    <!-- Background Gambar Layar -->
    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/bg_sign_in" />

    <ImageButton
        android:id="@+id/btn_back"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:background="@null"
        android:src="@drawable/btn_back"
        android:scaleType="fitCenter"
        android:adjustViewBounds="true"
        android:contentDescription="Back Button" />

    <!-- Judul Utama -->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textColor="@android:color/white"
        android:textSize="60sp"
        android:textStyle="bold"
        android:paddingTop="50dp"
        android:layout_margin="28dp" />

    <!-- Slogan -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/slogan_sign_in"
        android:textColor="@android:color/white"
        android:textSize="17sp"
        android:textStyle="italic"
        android:paddingTop="140dp"
        android:layout_margin="28dp"
        android:paddingEnd="80dp"/>

    <!-- Subjudul Bawah -->
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="28dp"
        android:paddingTop="240dp"
        android:text="@string/enter_pin"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/layout_pin_boxes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="300dp"
        android:layout_marginStart="38dp"
        android:layout_marginEnd="38dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="5">

        <!-- Kotak PIN -->
        <TextView
            android:id="@+id/pin_box_1"
            style="@style/PinBoxStyle" />

        <TextView
            android:id="@+id/pin_box_2"
            style="@style/PinBoxStyle" />

        <TextView
            android:id="@+id/pin_box_3"
            style="@style/PinBoxStyle" />

        <TextView
            android:id="@+id/pin_box_4"
            style="@style/PinBoxStyle" />

        <TextView
            android:id="@+id/pin_box_5"
            style="@style/PinBoxStyle" />

    </LinearLayout>


    <GridLayout
        android:id="@+id/grid_buttons"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginBottom="17dp"
        android:alignmentMode="alignMargins"
        android:columnCount="3"
        android:padding="6dp"
        android:rowCount="1">

        <!-- Tombol 1 -->
        <ImageButton
            android:id="@+id/btn_1"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 1"
            android:src="@drawable/btn_1" />

        <!-- Tombol 2 -->
        <ImageButton
            android:id="@+id/btn_2"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 2"
            android:src="@drawable/btn_2" />

        <!-- Tombol 3 -->
        <ImageButton
            android:id="@+id/btn_3"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 3"
            android:src="@drawable/btn_3" />

        <!-- Tombol 4 -->
        <ImageButton
            android:id="@+id/btn_4"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 4"
            android:src="@drawable/btn_4" />

        <!-- Tombol 5 -->
        <ImageButton
            android:id="@+id/btn_5"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 5"
            android:src="@drawable/btn_5" />

        <!-- Tombol 6 -->
        <ImageButton
            android:id="@+id/btn_6"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 6"
            android:src="@drawable/btn_6" />

        <!-- Tombol 7 -->
        <ImageButton
            android:id="@+id/btn_7"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 7"
            android:src="@drawable/btn_7" />

        <!-- Tombol 8 -->
        <ImageButton
            android:id="@+id/btn_8"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 8"
            android:src="@drawable/btn_8" />

        <!-- Tombol 9 -->
        <ImageButton
            android:id="@+id/btn_9"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 9"
            android:src="@drawable/btn_9" />

        <!-- Tombol 0 -->
        <ImageButton
            android:id="@+id/btn_0"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_margin="8dp"
            android:background="@null"
            android:contentDescription="Button 0"
            android:src="@drawable/btn_0" />

    </GridLayout>

    <!-- Logo di pojok kanan bawah -->
    <ImageView
        android:id="@+id/img_logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="20dp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo_tip" />

</RelativeLayout>
